# openppx

./: .gitignore  README.md  openpipixia-cli  pyproject.toml  requirements.txt
docs/: CHANNELS.md  CHANNEL_ACCOUNTID_CONTRACT.md  CHANNEL_SCOPE_CONTRACT.md  CONFIGURATION.md  MCP_SECURITY.md  MULTI_AGENT_COMPAT_PLAN.md  MULTI_AGENT_MIGRATION.md  MULTI_AGENT_RELEASE_CHECKLIST.md  MULTI_AGENT_STATUS.md  OPENCLAW_INSTALL_ALIGNMENT.md  OPERATIONS.md  PROJECT_OVERVIEW.md  README.md  SANDBOX.md  USE_CASES.md
openheron/: agent.py  browser_playwright_runtime.py  browser_routes.py  browser_runtime.py  browser_service.py  cli.py  tools.py
openpipixia/: __init__.py  cli.py
openppx/: __init__.py
scripts/: gui_smoke.py  install_smoke.sh  multi_agent_e2e.sh  whatsapp_bridge_e2e.sh
sentientagent_v2/: agent.py  cli.py  config.py  gateway.py  mcp_registry.py  openai_codex_llm.py  provider_registry.py  security.py  skills.py  tools.py
tests/: test_adk_utils.py  test_agent_mcp.py  test_agent_memory.py  test_agent_routing.py  test_agent_runtime_env.py  test_agent_runtime_security.py  test_agent_runtime_tool_policy.py  test_app_prompt.py  test_auth_paths.py  test_browser_e2e_http.py  test_browser_playwright_runtime.py  test_browser_remote_contract.py  test_browser_remote_job_protocol.py  test_browser_runtime.py  test_browser_schema.py  test_browser_service.py  test_bus_gateway.py  test_channel_manager.py  test_channels_factory.py  test_cli.py  test_cli_sandbox.py  test_config.py  test_debug_callbacks.py  test_dingtalk_channel.py  test_discord_channel.py  test_docker_sandbox_integration.py  test_email_channel.py  test_eval_entrypoint.py  test_feishu_channel.py  test_feishu_rendering.py  test_gui_checkpoint.py  test_gui_executor.py  test_gui_job_coordinator.py  test_gui_mcp.py  test_gui_mcp_server.py  test_gui_prompts.py  test_gui_smoke.py  test_gui_task_runner.py  (+51 more)
(+210 files in other folders)
